`Added introduction section to index.html with personal bio and social media links`

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,52 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <section class="introduction">
+            <div class="clipBK"></div>
+            <div class="introContainer">
+              <img
+                src="../images/free-photo-of-camel-caravan-at-dusk-in-merzouga-desert.jpeg"
+                alt="The developer of this website"
+              />
+              <article>
+                <h2>About me</h2>
+                <p>
+                  Hi there! I’m Nhlalo Nkos, an aspiring full sta developer with a
+                  big love for front-end development. My curiosity about how
+                  websites are structured and what makes some of them load faster
+                  than others has sparked an exciting journey into the world of web
+                  development. I find it fascinating to dive into the nitty-gritty
+                  of the internet and discover how everything works together. I’m
+                  particularly passionate about providing accessibility to people
+                  with current limitations, ensuring that everyone, regardless of
+                  their abilities, can enjoy and navigate the web seamlessly. Every
+                  day is a new adventure as I learn to create beautiful and
+                  efficient web applications, and I can’t wait to see where this
+                  path takes me!
+                </p>
+                <ul class="socialMediaContainer">
+                  <li>
+                    <a href="" target="_blank" rel="nooperner noreferrer">
+                      <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                        alt="redirect to my X page"
+                      />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" target="_blank" rel="nooperner noreferrer">
+                      <img
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                        alt="redirect to my github page"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </article>
+            </div>
+          </section>
+    </main>
     
 </body>
 </html>
