--- a/src/html/index.html
+++ b/src/html/index.html
@@ -51,6 +51,198 @@
               </article>
             </div>
           </section>
+          <section>
+            <h2>My work</h2>
+            <div class="projectContainer">
+              <div>
+                <a href=""
+                  ><img
+                    src="../images/free-photo-of-camel-caravan-at-dusk-in-merzouga-desert.jpeg"
+                    alt="redirect to my Tic Tac Toe Game"
+                /></a>
+                <header>
+                  <h3>Tic Tac Toe</h3>
+                  <ul>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                          alt="redirect to my X page"
+                        />
+                      </a>
+                    </li>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                          alt="redirect to my github page"
+                        />
+                      </a>
+                    </li>
+                  </ul>
+                </header>
+                <p>Tic Tac Toe is a simple, two-player strategy board game.</p>
+              </div>
+              <div>
+                <a href=""
+                  ><img
+                    src="../images/free-photo-of-camel-caravan-at-dusk-in-merzouga-desert.jpeg"
+                    alt="redirect to my BattleShip Game"
+                /></a>
+                <header>
+                  <h3>BattleShip</h3>
+                  <ul>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                          alt="redirect to my X page"
+                        />
+                      </a>
+                    </li>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                          alt="redirect to my github page"
+                        />
+                      </a>
+                    </li>
+                  </ul>
+                </header>
+                <p>Battleship is a classic guessing game of naval warfare</p>
+              </div>
+              <div>
+                <a href=""
+                  ><img
+                    src="../images/free-photo-of-camel-caravan-at-dusk-in-merzouga-desert.jpeg"
+                    alt="redirect to my To Do List Websi"
+                /></a>
+                <header>
+                  <h3>To-Do List</h3>
+                  <ul>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                          alt="redirect to my X page"
+                        />
+                      </a>
+                    </li>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                          alt="redirect to my github page"
+                        />
+                      </a>
+                    </li>
+                  </ul>
+                </header>
+                <p>
+                  A To-Do List is a simple yet powerful tool for managing tasks and
+                  increasing productivity.
+                </p>
+              </div>
+              <div>
+                <a href=""
+                  ><img
+                    src="../images/free-photo-of-camel-caravan-at-dusk-in-merzouga-desert.jpeg"
+                    alt="redirect to my basic calculator web app"
+                /></a>
+                <header>
+                  <h3>Basic Calculator</h3>
+                  <ul>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                          alt="redirect to my X page"
+                        />
+                      </a>
+                    </li>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                          alt="redirect to my github page"
+                        />
+                      </a>
+                    </li>
+                  </ul>
+                </header>
+                <p>
+                  A calculator is a device that performs basic mathematical
+                  calculations.
+                </p>
+              </div>
+              <div>
+                <a href="">
+                  <img
+                    src="../images/free-photo-of-camel-caravan-at-dusk-in-merzouga-desert.jpeg"
+                    alt="redirect to my Restaurant website"
+                /></a>
+                <header>
+                  <h3>Restaurant Web Page</h3>
+                  <ul>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                          alt="redirect to my X page"
+                        />
+                      </a>
+                    </li>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                          alt="redirect to my github page"
+                        />
+                      </a>
+                    </li>
+                  </ul>
+                </header>
+                <p>
+                  This website is a digital platform that showcases a restaurant's
+                  menu, services, and atmosphere.
+                </p>
+              </div>
+              <div>
+                <a href=""
+                  ><img
+                    src="../images/free-photo-of-camel-caravan-at-dusk-in-merzouga-desert.jpeg"
+                    alt="redirect to my Rock Paper Scissor Game"
+                /></a>
+                <header>
+                  <h3>Rock Paper Scissor</h3>
+                  <ul>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                          alt="redirect to my X page"
+                        />
+                      </a>
+                    </li>
+                    <li>
+                      <a href="" target="_blank" rel="nooperner noreferrer">
+                        <img
+                          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                          alt="redirect to my github page"
+                        />
+                      </a>
+                    </li>
+                  </ul>
+                </header>
+                <p>
+                  This is a hand game played between two people. Each player
+                  simultaneously throws one of three hand signals: Rock, Paper , or
+                  Scissors.
+                </p>
+              </div>
+            </div>
+          </section>
     </main>
     
 </body>
