`Added new footer section with contact information and social media links`

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -244,6 +244,50 @@
             </div>
           </section>
     </main>
+    <footer>
+        <article>
+          <h2>Contact Me</h2>
+          <p>
+            If you’d like to get in touch, I’d love to hear from you! You can
+            reach me via email or phone call, where I’m always happy to answer
+            questions or discuss potential collaborations. Additionally, feel free
+            to connect with me on social media platforms like LinkedIn and
+            Twitter, where I share updates and insights about my work.
+          </p>
+          <ul>
+            <li>
+              <img src="../images/email_542689.png" alt="Gmail icon" />
+              <p>nhlalonkosi@gmail.com</p>
+            </li>
+            <li>
+              <img src="../images/phone-call_455705 (1).png" alt="phone icon" />
+              <p>0640262744</p>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="" target="_blank" rel="nooperner noreferrer">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+                  alt="redirect to my X page"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="nooperner noreferrer">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                  alt="redirect to my github page"
+                />
+              </a>
+            </li>
+          </ul>
+        </article>
+        <img
+          src="../images/free-photo-of-camel-caravan-at-dusk-in-merzouga-desert.jpeg"
+          alt="The developer of this website"
+        />
+      </footer>
     
 </body>
 </html>
