`Update index.html: replace clipBK div with decorativeBG div`

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
   <body>
     <main>
       <section class="introduction">
-        <div class="clipBK"></div>
+        <div class="decorativeBG"></div>
         <div class="introContainer">
           <img
             src="../images/free-photo-of-camel-caravan-at-dusk-in-merzouga-desert.jpeg"
