Add the socialMediaIcons class

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,6 +36,7 @@
                   <img
                     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
                     alt="redirect to my X page"
+                    class="socialMediaIcons"
                   />
                 </a>
               </li>
@@ -44,6 +45,7 @@
                   <img
                     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                     alt="redirect to my github page"
+                    class="socialMediaIcons"
                   />
                 </a>
               </li>
